# hrv-rs

./: .gitignore  Cargo.toml  README.md  codecov.yml
.github/workflows/: release.yml  rust.yml
src/: main.rs
src/api/: controller.rs  model.rs  view.rs
src/components/: application.rs  bluetooth.rs  measurement.rs  storage.rs
src/controller/: acquisition.rs  application.rs  bluetooth.rs
src/core/: constants.rs  events.rs  macros.rs  view_trait.rs
src/math/: hrv.rs
src/model/: acquisition.rs  bluetooth.rs  hrv.rs  storage.rs
src/view/: acquisition.rs  bluetooth.rs  hrv_analysis.rs  manager.rs  model_initializer.rs  overview.rs
