[package]
name = "hrv-rs"
version = "0.2.0"
edition = "2021"

[features]
mock=[]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.29.1"
egui_extras = "0.29.1"
egui_plot = "0.29.0"
eframe = { version = "0.29.1", features = ["default"] }
image = { version = "0.25.1", default-features = false, features = ["png"] }
rfd = "0.15.1"
env_logger = { version = "0.11.5", default-features = false, features = [
  "auto-color",
  "humantime",
] }
btleplug = "0.11.6"
uuid = {version = "1.11.0", features = ["v4"]}
tokio = { version = "1.41.1", features = ['full'] }
futures = "0.3.31"
nalgebra = "0.33.2"
time = { version = "0.3.36", features = ["macros", "serde", "serde-human-readable", "serde-well-known"] }
log = { version = "0.4.22", features = [] }
serde = { version = "1.0.215", features = ["derive", "serde_derive"] }
serde_json = "1.0.133"
async-trait = "0.1.83"
mockall = "0.13.1"
rand = "0.8.5"
typetag = "0.2.18"
